--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,7 +84,7 @@ android {
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion '1.5.3'
+        kotlinCompilerExtensionVersion '1.5.10'
     }
 
     productFlavors {
@@ -157,6 +157,8 @@ dependencies {
     implementation 'androidx.compose.foundation:foundation:1.0.0'
     // Material Design
     implementation 'androidx.compose.material:material:1.0.0'
+    implementation 'androidx.compose.material3:material3:1.2.1'
+    implementation 'androidx.compose.material3:material3-window-size-class:1.2.1'
     // Material design icons
     implementation 'androidx.compose.material:material-icons-core:1.0.0'
     implementation 'androidx.compose.material:material-icons-extended:1.0.0'
@@ -173,6 +175,7 @@ dependencies {
 
     implementation "androidx.hilt:hilt-work:1.0.0"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
+    implementation 'androidx.hilt:hilt-navigation-compose:1.2.0'
 
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:2.0.0"
@@ -181,6 +184,7 @@ dependencies {
 
     // Paging
     implementation 'androidx.paging:paging-runtime-ktx:3.1.0-alpha03'
+    implementation 'androidx.paging:paging-compose:3.3.0'
     // Work manager
     implementation 'androidx.work:work-runtime-ktx:2.7.0-alpha05'
     implementation 'androidx.work:work-rxjava3:2.7.0-alpha05'
