--- a/app/build.gradle
+++ b/app/build.gradle
@@ -153,6 +153,8 @@ dependencies {
     implementation("androidx.compose.runtime:runtime:1.4.1")
     // Tooling support (Previews, etc.)
     implementation 'androidx.ui:ui-tooling:1.0.0-alpha07'
+    implementation 'androidx.compose.ui:ui-tooling-preview:1.6.8'
+    debugImplementation("androidx.compose.ui:ui-tooling:")
     // Foundation (Border, Background, Box, Image, Scroll, shapes, animations, etc.)
     implementation 'androidx.compose.foundation:foundation:1.0.0'
     // Material Design
