--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
+        android:localeConfig="@xml/locales_config"
+        tools:targetApi="tiramisu"
         android:usesCleartextTraffic="true"
         tools:replace="android:allowBackup">
         <activity
