FEAT: Picking the "Change PIN" option from the settings menu now navigates to the ChangePinVerificationScreen.kt which checks for user credentials and, if they are valid, navigates to the SmsVerificationScreen.kt that contains the button for requesting an activation code that is to be delivered via SMS and read by our app. This is done using SmsBroadcastReceiver.kt that uses the libraries we added to the build.gradle file. Incorporated this into our navigation graph. Added necessary resources.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -301,6 +301,10 @@ dependencies {
 
     // Mockito inline
     testImplementation("org.mockito:mockito-inline:5.2.0")
+
+    // SMS User Consent API
+    implementation("com.google.android.gms:play-services-auth:21.2.0")
+    implementation("com.google.android.gms:play-services-auth-api-phone:18.1.0")
 }
 
 apply plugin: 'com.google.gms.google-services'
