FEAT: Implemented HeadlessPaymentActivity.kt as a substitute for the old PosActivity.kt without the UI elements, and the CardProcessingScreen.kt for card payment. Activity needs further work because NFC card reading doesn't work yet. Incorporated it into our navigation, our HeadlessPaymentActivity.kt is supposed to return the results to our MainActivity.kt and show the transaction result screen.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,11 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".activities.HeadlessPaymentActivity"
+            android:theme="@style/Theme.Transparent"
+            android:noHistory="true"
+            android:excludeFromRecents="true" />
+        <activity
             android:name="com.payten.whitelabel.activities.CustomAmountActivity"
             android:exported="false" />
         <activity
