--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,9 +59,13 @@
         </activity>
         <activity
             android:name=".activities.HeadlessPaymentActivity"
+            android:launchMode="singleTop"
             android:theme="@style/Theme.Transparent"
             android:noHistory="true"
             android:excludeFromRecents="true" />
+        <meta-data
+            android:name="android.nfc.action.TECH_DISCOVERED"
+            android:resource="@xml/nfc_tech_filter" />
         <activity
             android:name="com.payten.whitelabel.activities.CustomAmountActivity"
             android:exported="false" />
